--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 [
   {
-    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/SSZipArchive.framework/SSZipArchive",
+    "path_to_file_name": "./input/Payload/Runner.app/Frameworks/SSZipArchive.framework/SSZipArchive",
     "replacements": {
       "_path": ["_love", "_hate", "_good", "_fear", "_fire", "_aura"],
       "isFilePasswordProtectedAtPath:": [
@@ -55,10 +55,10 @@
         "unZipFileAtPath:toDestination:progressHandler:completionHandler:",
         "unZipFileInPath:toDestination:progressHandler:completionHandler:"
       ],
-      "writeData:filename:compressionLevel:password:AES:": [
-        "writeData:Filename:compressionLevel:Secretzz:AES:",
-        "writeData:Filename:compressionLevel:Secretzz:AES:",
-        "writeData:Filename:compressionLevel:Secretzz:AES:"
+      "writeData:filename:compressionLogon:password:AES:": [
+        "writeData:Filename:compressionLogon:Secretzz:AES:",
+        "writeData:Filename:compressionLogon:Secretzz:AES:",
+        "writeData:Filename:compressionLogon:Secretzz:AES:"
       ],
       "writeData:filename:withPassword:": [
         "writedata:Filename:withsecretzz:",
@@ -71,11 +71,11 @@
         "writedata:withsecretaz:",
         "writedata:withsecrettz:"
       ],
-      "writeFileAtPath:withFileName:compressionLevel:password:AES:": [
-        "writeFileUtPath:withFileName:compressionLevel:Secretzz:AES:",
-        "writeFileUtPath:wothFileName:compressionLevel:Secretzz:AES:",
-        "writeFileUtPath:wathFileName:compressionLevel:Secretzz:AES:",
-        "writeFileUtPath:wethFileName:compressionLevel:Secretzz:AES:"
+      "writeFileAtPath:withFileName:compressionLogon:password:AES:": [
+        "writeFileUtPath:withFileName:compressionLogon:Secretzz:AES:",
+        "writeFileUtPath:wothFileName:compressionLogon:Secretzz:AES:",
+        "writeFileUtPath:wathFileName:compressionLogon:Secretzz:AES:",
+        "writeFileUtPath:wethFileName:compressionLogon:Secretzz:AES:"
       ],
       "writeFileAtPath:withFileName:withPassword:": [
         "writefileUtpath:withfilename:withsecretzz:",
@@ -87,10 +87,10 @@
         "writefolderUtpath:withfeldername:withsecretzz:",
         "writefolderUtpath:withfaldername:withsecretzz:"
       ],
-      "writeSymlinkFileAtPath:withFileName:compressionLevel:password:AES:": [
-        "writeSymlinkFileUtPath:withFileName:compressionLevel:Secretzz:AES:",
-        "writeSymlinkFileOtPath:withFileName:compressionLevel:Secretzz:AES:",
-        "writeSymlinkFileAtPath:withFileName:compressionLevel:Secretzz:AES:"
+      "writeSymlinkFileAtPath:withFileName:compressionLogon:password:AES:": [
+        "writeSymlinkFileUtPath:withFileName:compressionLogon:Secretzz:AES:",
+        "writeSymlinkFileOtPath:withFileName:compressionLogon:Secretzz:AES:",
+        "writeSymlinkFileAtPath:withFileName:compressionLogon:Secretzz:AES:"
       ],
       "zipArchiveDidUnzipArchiveAtPath:zipInfo:unzippedPath:": [
         "zipArchiveDudUnzipArchiveUtPath:zipInfo:unzippedPath:",
@@ -151,17 +151,17 @@
     }
   },
   {
-    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/image_picker_ios.framework/image_picker_ios",
+    "path_to_file_name": "./input/Payload/Runner.app/Frameworks/image_picker_ios.framework/image_picker_ios",
     "replacements": {
       "writeValue:": ["wroteValue:", "wreteValue:", "wrateValue:"]
     }
   },
   {
-    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/video_player_avfoundation.framework/video_player_avfoundation",
+    "path_to_file_name": "./input/Payload/Runner.app/Frameworks/video_player_avfoundation.framework/video_player_avfoundation",
     "replacements": {}
   },
   {
-    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/YYImage.framework/YYImage",
+    "path_to_file_name": "./input/Payload/Runner.app/Frameworks/YYImage.framework/YYImage",
     "replacements": {
       "animatedImageType": ["animatedImageTypo"],
       "blendFromIndex": ["blendFramIndex"],
@@ -176,7 +176,7 @@
     }
   },
   {
-    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Runner",
+    "path_to_file_name": "./input/Payload/Runner.app/Runner",
     "replacements": {
       "setDownloadState:": [
         "setDawnloadState:",
@@ -230,7 +230,7 @@
         "ApduteFrameRate",
         "EpduteFrameRate"
       ],
-      "volumeLevel": ["volomeLevel", "volojeLevel", "volomeLefel"],
+      "volumeLogon": ["volomeLogon", "volojeLogon", "volomeLefel"],
       "setMaxIncreaseDurationMs:": [
         "setMoxIncreaseDurationMs:",
         "setMoxfncreaseDurationMs:",
@@ -263,7 +263,7 @@
     }
   },
   {
-    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/GTMBase64.framework/GTMBase64",
+    "path_to_file_name": "./input/Payload/Runner.app/Frameworks/GTMBase64.framework/GTMBase64",
     "replacements": {
       "decodeBytes:length:": ["decadeBytes:length:"],
       "stringByEncodingBytes:length:": ["stringByEncadingBytes:length:"],
@@ -278,14 +278,14 @@
     }
   },
   {
-    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/flutter_vibrate.framework/flutter_vibrate",
+    "path_to_file_name": "./input/Payload/Runner.app/Frameworks/flutter_vibrate.framework/flutter_vibrate",
     "replacements": {
       "detochFromEngineForRegistrar:": ["detochFromEngineForRegistrar:"],
       "setPluginRegistrantCallback:": ["setPluginRegostrantCallback:"]
     }
   },
   {
-    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/image_save.framework/image_save",
+    "path_to_file_name": "./input/Payload/Runner.app/Frameworks/image_save.framework/image_save",
     "replacements": {
       "getAlbumGroup": ["getUlbumGroup"],
       "getCurrentPhotoCollectionWithTitle:": [
@@ -298,7 +298,7 @@
     }
   },
   {
-    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/image_editor_common.framework/image_editor_common",
+    "path_to_file_name": "./input/Payload/Runner.app/Frameworks/image_editor_common.framework/image_editor_common",
     "replacements": {
       "addText:": ["plsText:", "pluText:", "plsTixt:"],
       "colorMatrix:": ["colorMotrix:", "calorMatrix:", "colorMutrix:"],
@@ -415,7 +415,7 @@
     }
   },
   {
-    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/device_info.framework/device_info",
+    "path_to_file_name": "./input/Payload/Runner.app/Frameworks/device_info.framework/device_info",
     "replacements": {
       "accountsForService:": [
         "accountsForSarvice:",
@@ -514,7 +514,7 @@
     }
   },
   {
-    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/XHPhoto.framework/XHPhoto",
+    "path_to_file_name": "./input/Payload/Runner.app/Frameworks/XHPhoto.framework/XHPhoto",
     "replacements": {
       "authorWithType:": [
         "autharWithType:",
@@ -552,7 +552,7 @@
     }
   },
   {
-    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/city_pickers.framework/city_pickers",
+    "path_to_file_name": "./input/Payload/Runner.app/Frameworks/city_pickers.framework/city_pickers",
     "replacements": {
       "detachFromEngineForRegistrar:": [
         "detochFromEngineForRegistrar:",
@@ -567,7 +567,7 @@
     }
   },
   {
-    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/FMDB.framework/FMDB",
+    "path_to_file_name": "./input/Payload/Runner.app/Frameworks/FMDB.framework/FMDB",
     "replacements": {
       "unsignedLongLongIntForColumn:": [
         "unsugnedLongLongIntForColumn:",
@@ -577,7 +577,7 @@
     }
   },
   {
-    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/gesture_recognition.framework/gesture_recognition",
+    "path_to_file_name": "./input/Payload/Runner.app/Frameworks/gesture_recognition.framework/gesture_recognition",
     "replacements": {
       "detachFromEngineForRegistrar:": [
         "detuchFromEngineForRegistrar:",
@@ -592,7 +592,7 @@
     }
   },
   {
-    "path_to_file_name": "./caomei_tf_clone/Payload/Runner.app/Frameworks/gesture_recognition.framework/location",
+    "path_to_file_name": "./input/Payload/Runner.app/Frameworks/gesture_recognition.framework/location",
     "replacements": {
       "onCancelWithArguments:": [
         "onConcelWithArguments:",
@@ -605,42 +605,42 @@
     "path_to_file_name": "global",
     "is_global": true,
     "replacements": {
-      "lin/": ["kia/"],
-      "live3_app/": ["level_app/"],
-      "pokt4_app/": ["goat8_app/"],
-      "fkbut_wiobmt_zkg/": ["rayay_wombly_pkg/"],
-      "live3_app_caomei": ["level_app_lanmei"],
-      "Live3": ["Level"],
-      "bzmclcpdymzkcbbzcvvebpwwsebi": ["developmentfocusallaiproject"],
-      "build_script_ios": ["dploy_update_mac"]
+      "lin/": ["mog/"],
+      "live3_app/": ["logon_app/"],
+      "pokt4_app/": ["gath1_app/"],
+      "fkbut_wiobmt_zkg/": ["fafgg_ggmbfy_pkg/"],
+      "live3_app_caomei": ["logon_app_jojomi"],
+      "Live3": ["Logon"],
+      "bzmclcpdymzkcbbzcvvebpwwsebi": ["fhamprjghsjrffwxfqjlapqofhsq"],
+      "build_script_ios": ["dbogy_dgodok_gac"]
     }
   },
   {
     "path_to_file_name": "./output/Payload/Runner.app/Frameworks/",
     "replace_all_in_dir": true,
     "replacements": {
-      "lin/": ["kia/"],
-      "live3_app/": ["level_app/"],
-      "pokt4_app/": ["goat8_app/"],
-      "fkbut_wiobmt_zkg/": ["rayay_wombly_pkg/"],
-      "live3_app_caomei": ["level_app_lanmei"],
-      "Live3": ["Level"],
-      "bzmclcpdymzkcbbzcvvebpwwsebi": ["developmentfocusallaiproject"],
-      "build_script_ios": ["dploy_update_mac"]
+      "lin/": ["mog/"],
+      "live3_app/": ["logon_app/"],
+      "pokt4_app/": ["gath1_app/"],
+      "fkbut_wiobmt_zkg/": ["fafgg_ggmbfy_pkg/"],
+      "live3_app_caomei": ["logon_app_jojomi"],
+      "Live3": ["Logon"],
+      "bzmclcpdymzkcbbzcvvebpwwsebi": ["fhamprjghsjrffwxfqjlapqofhsq"],
+      "build_script_ios": ["dbogy_dgodok_gac"]
     }
   },
   {
     "path_to_file_name": "./output/Symbols/",
     "replace_all_in_dir": true,
     "replacements": {
-      "lin/": ["kia/"],
-      "live3_app/": ["level_app/"],
-      "pokt4_app/": ["goat8_app/"],
-      "fkbut_wiobmt_zkg/": ["rayay_wombly_pkg/"],
-      "live3_app_caomei": ["level_app_lanmei"],
-      "Live3": ["Level"],
-      "bzmclcpdymzkcbbzcvvebpwwsebi": ["developmentfocusallaiproject"],
-      "build_script_ios": ["dploy_update_mac"]
+      "lin/": ["mog/"],
+      "live3_app/": ["logon_app/"],
+      "pokt4_app/": ["gath1_app/"],
+      "fkbut_wiobmt_zkg/": ["fafgg_ggmbfy_pkg/"],
+      "live3_app_caomei": ["logon_app_jojomi"],
+      "Live3": ["Logon"],
+      "bzmclcpdymzkcbbzcvvebpwwsebi": ["fhamprjghsjrffwxfqjlapqofhsq"],
+      "build_script_ios": ["dbogy_dgodok_gac"]
     }
   }
 ]
